Custom--app/main/default/objects/Tenant_App__c/Tenant_App__c.object-meta.xml
<CustomObject>
    <description>This is part of the Leasing/Marketing deployment.  This tracks all of the workflow from the time we receive an application through move-in.  The only fields specific to the applicant are name/phone and email.  All applicant data lives in Yardi.  There are Triggers between AppTrack and Listing that update the Status field on both objects automatically.  There are also Workflow Rules that fire.  Use SkipTriggersForUser to make any data updates (including just to ID) on AppTrack and Listing.  Refer to the Status field Descriptions on both objects for more information.</description>
    <label>Application Tracking</label>
    <nameField>
        <displayFormat>AppTrack-{00000}</displayFormat>
        <label>App Tracking #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Tracking</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>