Custom--app/main/default/objects/Tenant_App__c/fields/Actual_Move_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Move_in_Date__c</fullName>
    <inlineHelpText>Should be populated after resident moves in. This will trigger the File Status to change to Move-In Complete.</inlineHelpText>
    <label>Actual Move-In Date</label>
    <type>Date</type>
</CustomField>