Custom--app/main/default/objects/Tenant_App__c/fields/Add_l_Income_Docs_Requested_to_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Add_l_Income_Docs_Requested_to_Uploaded__c</fullName>
    <formula>(Additional_Income_Doc_Upload_Date__c - Notification_to_Agent_Add_l_Docs_Date__c)</formula>
    <label>Add'l Income Docs Requested to Uploaded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>