Custom--app/main/default/objects/Tenant_App__c/fields/Additional_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Additional_Applicants__c</fullName>
    <label>Additional Applicants</label>
    <type>TextArea</type>
</CustomField>