Custom--app/main/default/objects/Tenant_App__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>