Custom--app/main/default/objects/Tenant_App__c/fields/Additional_Deposit_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Deposit_Required__c</fullName>
    <inlineHelpText>If this application was approved with conditions, what is the additional deposit amount required?</inlineHelpText>
    <label>Additional Security Deposit Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>