Custom--app/main/default/objects/Tenant_App__c/fields/Additional_Income_Doc_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Income_Doc_Upload_Date__c</fullName>
    <label>Additional Income Doc Upload Date</label>
    <type>DateTime</type>
</CustomField>