Custom--app/main/default/objects/Tenant_App__c/fields/Additional_Security_Deposit_Rec_d__c.field-meta.xml
<CustomField>
    <fullName>Additional_Security_Deposit_Rec_d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Security Deposit Rec'd</label>
    <type>Checkbox</type>
</CustomField>