Custom--app/main/default/objects/Tenant_App__c/fields/Additional_Security_Deposit_Recv_d_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Security_Deposit_Recv_d_Date__c</fullName>
    <label>Additional Security Deposit Recv'd Date</label>
    <type>DateTime</type>
</CustomField>