Custom--app/main/default/objects/Tenant_App__c/fields/Additional_Security_Deposit_Total__c.field-meta.xml
<CustomField>
    <fullName>Additional_Security_Deposit_Total__c</fullName>
    <label>Additional Security Deposit Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>