Custom--app/main/default/objects/Tenant_App__c/fields/Adverse_Action_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Adverse_Action_Notification_Date__c</fullName>
    <inlineHelpText>Please confirm the date that you have notified the resident that their application was declined.</inlineHelpText>
    <label>Adverse Action Notification Date</label>
    <type>Date</type>
</CustomField>