Custom--app/main/default/objects/Tenant_App__c/fields/Agent_Assigned_to_Listing__c.field-meta.xml
<CustomField>
    <fullName>Agent_Assigned_to_Listing__c</fullName>
    <formula>Listing__r.Agent_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field  is a formula from the Listing and displays either 1) the value in "Listing Agent (Internal) or 2) the value in "External/3rd Party Broker" or 3)  the value in the "Listing Agent Temporary Text" field.</inlineHelpText>
    <label>*Agent Assigned to Listing</label>
    <type>Text</type>
</CustomField>