Custom--app/main/default/objects/Tenant_App__c/fields/Agent_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Check_Date__c</fullName>
    <label>Listing Agent Check Date</label>
    <type>Date</type>
</CustomField>