Custom--app/main/default/objects/Tenant_App__c/fields/Agent_Invoice_Recv_d_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Invoice_Recv_d_Date__c</fullName>
    <label>Listing Agent Invoice Recv'd Date</label>
    <type>Date</type>
</CustomField>