Custom--app/main/default/objects/Tenant_App__c/fields/Agent_Verif_Complete_to_Lease_Prep_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Agent_Verif_Complete_to_Lease_Prep_Hrs__c</fullName>
    <formula>(Lease_Prepared_Sent_Date__c - Agent_Verification_Complete_Date__c )</formula>
    <inlineHelpText>Agent Verification Complete Date to Lease Prepared/Sent Date (Hours)</inlineHelpText>
    <label>Agent Verif Complete to Lease Prep(Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>