Custom--app/main/default/objects/Tenant_App__c/fields/Agent_Verification_Complete__c.field-meta.xml
<CustomField>
    <fullName>Agent_Verification_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Verification Complete</label>
    <type>Checkbox</type>
</CustomField>