Custom--app/main/default/objects/Tenant_App__c/fields/Agent_Verification_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Verification_Complete_Date__c</fullName>
    <label>Agent Verification Complete Date</label>
    <type>DateTime</type>
</CustomField>