Custom--app/main/default/objects/Tenant_App__c/fields/App_Rec_to_Approval_Letter_to_Agent_Da__c.field-meta.xml
<CustomField>
    <fullName>App_Rec_to_Approval_Letter_to_Agent_Da__c</fullName>
    <formula>Approval_Letter_to_Agent_Date__c - App_Received__c</formula>
    <label>App Rec. to Approval Letr. to Agt(Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>