Custom--app/main/default/objects/Tenant_App__c/fields/App_Rec_vd_Dt_to_Lease_Prep_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>App_Rec_vd_Dt_to_Lease_Prep_Sent_Date__c</fullName>
    <formula>(Lease_Prepared_Sent_Date__c -  App_Received__c)</formula>
    <label>App Rec'vd Dt. to Lease Prep./Sent Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>