Custom--app/main/default/objects/Tenant_App__c/fields/App_Received__c.field-meta.xml
<CustomField>
    <fullName>App_Received__c</fullName>
    <label>App Received Date</label>
    <type>DateTime</type>
</CustomField>