Custom--app/main/default/objects/Tenant_App__c/fields/App_Received_to_AppTrack_Created_Hours__c.field-meta.xml
<CustomField>
    <fullName>App_Received_to_AppTrack_Created_Hours__c</fullName>
    <formula>(AppTrack_Created__c - App_Received__c)</formula>
    <label>App Received to AppTrack Created (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>