Custom--app/main/default/objects/Tenant_App__c/fields/Appliance_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Schedule_Date__c</fullName>
    <label>Appliance Schedule Date</label>
    <type>Date</type>
</CustomField>