Custom--app/main/default/objects/Tenant_App__c/fields/Appliance_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appliance Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Tracking (Appliance Vendor)</relationshipLabel>
    <relationshipName>Application_Tracking1</relationshipName>
    <type>Lookup</type>
</CustomField>