Custom--app/main/default/objects/Tenant_App__c/fields/Appliances_Installed__c.field-meta.xml
<CustomField>
    <fullName>Appliances_Installed__c</fullName>
    <label>Appliances Installed</label>
    <type>Date</type>
</CustomField>