Custom--app/main/default/objects/Tenant_App__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>If the Primary Application Tracking record is populated on the related Listing, the Listing will move through the Status updates automatically via one or more Triggers created by Appirio in early 2013.  There are also these Workflow Rules on Application Tracking that work in conjunction with these Triggers:  (1) Update App Status When Lease is Prepared, and (2) Update App Status when Deposit Received.  Use SkipTriggersForUser for any data updates to Application Tracking or Listing.  Even data loads to AppTrack IDs only fires both the workflows and Triggers.</description>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved - Pending HOA</fullName>
            </value>
            <value>
                <fullName>Approved - Pending Housing Authority</fullName>
            </value>
            <value>
                <fullName>Approved with Conditions</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved - Awaiting Deposit</fullName>
            </value>
            <value>
                <fullName>Approved - Deposit Received/Leased</fullName>
            </value>
            <value>
                <fullName>Approved/Hold Fee Rec/Pre-leased</fullName>
            </value>
            <value>
                <fullName>Approved - Awaiting Hold Fee</fullName>
            </value>
            <value>
                <fullName>Pending Cancellation</fullName>
            </value>
            <value>
                <fullName>Approved/Hold Fee Rec'd</fullName>
            </value>
            <value>
                <fullName>Approved/Deposit Rec'd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>