Custom--app/main/default/objects/Tenant_App__c/fields/Approval_Letter_to_Agent__c.field-meta.xml
<CustomField>
    <fullName>Approval_Letter_to_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Letter to Agent</label>
    <type>Checkbox</type>
</CustomField>