Custom--app/main/default/objects/Tenant_App__c/fields/Approval_Letter_to_Agent_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Letter_to_Agent_Date__c</fullName>
    <label>Approval Letter to Agent Date</label>
    <type>DateTime</type>
</CustomField>