Custom--app/main/default/objects/Tenant_App__c/fields/Approval_Letter_to_Agent_Verif_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Approval_Letter_to_Agent_Verif_Hrs__c</fullName>
    <formula>( Agent_Verification_Complete_Date__c - Approval_Letter_to_Agent_Date__c )</formula>
    <inlineHelpText>Approval Letter to Agent to Agent Verification Complete Date (Hours)</inlineHelpText>
    <label>Approval Letter to Agent to Agent Verif.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>