Custom--app/main/default/objects/Tenant_App__c/fields/AppTrack_Created__c.field-meta.xml
<CustomField>
    <fullName>AppTrack_Created__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AppTrack Created</label>
    <type>DateTime</type>
</CustomField>