Custom--app/main/default/objects/Tenant_App__c/fields/AppTrack_Created_On_or_After_8132014__c.field-meta.xml
<CustomField>
    <fullName>AppTrack_Created_On_or_After_8132014__c</fullName>
    <description>For use with the "Min. Monthly Income Required" formula and related analysis.</description>
    <formula>IF( DATEVALUE( CreatedDate )  >=  DATE(2014,8,13)  , 'Yes', 'No')</formula>
    <label>AppTrack Created On or After 8-13-2014</label>
    <type>Text</type>
</CustomField>