Custom--app/main/default/objects/Tenant_App__c/fields/AppTrack_Created_to_Screening_Recommenda__c.field-meta.xml
<CustomField>
    <fullName>AppTrack_Created_to_Screening_Recommenda__c</fullName>
    <formula>Credit_Check_Complete__c - App_Received__c</formula>
    <inlineHelpText>AppTrack Created to Screening Recommendation Received (Hours)</inlineHelpText>
    <label>App Rec'd Date to Screening Recom. Rec'd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>