Custom--app/main/default/objects/Tenant_App__c/fields/AppTrack_Created_to_VOI_Completed_Hours__c.field-meta.xml
<CustomField>
    <fullName>AppTrack_Created_to_VOI_Completed_Hours__c</fullName>
    <formula>(VOI_Completed__c - App_Received__c )</formula>
    <label>App Rec'd Date to VOI Completed (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>