Custom--app/main/default/objects/Tenant_App__c/fields/AppTrack_Listing_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>AppTrack_Listing_Agent_Email__c</fullName>
    <label>AppTrack Listing Agent Email</label>
    <type>Email</type>
</CustomField>