Custom--app/main/default/objects/Tenant_App__c/fields/Awaiting_Agent_Verification__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Agent_Verification__c</fullName>
    <formula>NOW() -  Approval_Letter_to_Agent_Date__c</formula>
    <label>Awaiting Agent Verification</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>