Custom--app/main/default/objects/Tenant_App__c/fields/Awaiting_Lease_Preparation_Lease_Admin__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Lease_Preparation_Lease_Admin__c</fullName>
    <formula>Now() -  Agent_Verification_Complete_Date__c</formula>
    <label>Awaiting Lease Preparation - Lease Admin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>