Custom--app/main/default/objects/Tenant_App__c/fields/Awaiting_Revised_Lease__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Revised_Lease__c</fullName>
    <formula>Now() -  Revised_Lease_Requested_Date__c</formula>
    <label>Awaiting Revised Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>