Custom--app/main/default/objects/Tenant_App__c/fields/Awaiting_Screening_Results__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Screening_Results__c</fullName>
    <formula>NOW() - AppTrack_Created__c</formula>
    <label>Awaiting Screening Results</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>