Custom--app/main/default/objects/Tenant_App__c/fields/Awaiting_VOI_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_VOI_Applicant__c</fullName>
    <formula>NOW() -  Notification_to_Agent_Add_l_Docs_Date__c</formula>
    <label>Awaiting VOI - Applicant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>