Custom--app/main/default/objects/Tenant_App__c/fields/Awaiting_VOI_Lease_Admin__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_VOI_Lease_Admin__c</fullName>
    <formula>NOW() -  Credit_Check_Complete__c</formula>
    <label>Awaiting VOI - Lease Admin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>