Custom--app/main/default/objects/Tenant_App__c/fields/Back_End_Super_Email__c.field-meta.xml
<CustomField>
    <fullName>Back_End_Super_Email__c</fullName>
    <label>Back End Super Email</label>
    <type>Email</type>
</CustomField>