Custom--app/main/default/objects/Tenant_App__c/fields/Back_End_Super_From_Rehab__c.field-meta.xml
<CustomField>
    <fullName>Back_End_Super_From_Rehab__c</fullName>
    <formula>Listing__r.Rehab__r.Back_end_Supervisor__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Back End Super (From Rehab)</label>
    <type>Text</type>
</CustomField>