Custom--app/main/default/objects/Tenant_App__c/fields/Back_End_Supervisor_if_different__c.field-meta.xml
<CustomField>
    <fullName>Back_End_Supervisor_if_different__c</fullName>
    <inlineHelpText>Please enter the name of the back end supervisor if it is different than listed on the rehab</inlineHelpText>
    <label>Back End Supervisor (if Different)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>