Custom--app/main/default/objects/Tenant_App__c/fields/Cancellation_Details__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Details__c</fullName>
    <label>Cancellation Details</label>
    <type>TextArea</type>
</CustomField>