Custom--app/main/default/objects/Tenant_App__c/fields/Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason__c</fullName>
    <label>Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Application_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Applied Sight Unseen - Unhappy w/ Home</fullName>
            </value>
            <value>
                <fullName>By IH - Applicant Unresponsive/Cancelled</fullName>
            </value>
            <value>
                <fullName>By IH - Application Docs Not Submitted</fullName>
            </value>
            <value>
                <fullName>By IH - Deposit Not Paid</fullName>
            </value>
            <value>
                <fullName>By IH - Lease Not Signed</fullName>
            </value>
            <value>
                <fullName>By IH - Section 8 (Doesn’t Qualify)</fullName>
            </value>
            <value>
                <fullName>Can’t Accommodate Move-in Date</fullName>
            </value>
            <value>
                <fullName>Deposit Too High</fullName>
            </value>
            <value>
                <fullName>Different IH Home (Transferred)</fullName>
            </value>
            <value>
                <fullName>Home Not Available</fullName>
            </value>
            <value>
                <fullName>Job Relocation</fullName>
            </value>
            <value>
                <fullName>Leased Elsewhere</fullName>
            </value>
            <value>
                <fullName>Lease Terms/Conditions</fullName>
            </value>
            <value>
                <fullName>Length of Application Process</fullName>
            </value>
            <value>
                <fullName>Length of Screening Approval</fullName>
            </value>
            <value>
                <fullName>QC Issues (Rehab Extended)</fullName>
            </value>
            <value>
                <fullName>Unhappy With Agent</fullName>
            </value>
            <value>
                <fullName>By IH - Agent Verification Incomplete</fullName>
            </value>
            <value>
                <fullName>By IH - Hold Form Not Signed</fullName>
            </value>
            <value>
                <fullName>By IH - Application Docs Not Sufficient</fullName>
            </value>
            <value>
                <fullName>Financial Hardship</fullName>
            </value>
            <value>
                <fullName>Declined HOA</fullName>
            </value>
            <value>
                <fullName>Declined - Awaiting Client Dispute</fullName>
            </value>
            <value>
                <fullName>By IH - Agent/Market Unresponsive</fullName>
            </value>
            <value>
                <fullName>By IH - Insufficient Docs</fullName>
            </value>
            <value>
                <fullName>By IH - Declined by Housing Authority (Doesn’t Qualify)</fullName>
            </value>
            <value>
                <fullName>By IH - Incomplete Application (Unable to process)</fullName>
            </value>
            <value>
                <fullName>Personal/Familial</fullName>
            </value>
            <value>
                <fullName>Unable to Accommodate Move-In Date</fullName>
            </value>
            <value>
                <fullName>Higher Deposit Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>