Custom--app/main/default/objects/Tenant_App__c/fields/Children_Adult_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Children_Adult_Dependents__c</fullName>
    <label>Non-Applicant Occupants</label>
    <type>TextArea</type>
</CustomField>