Custom--app/main/default/objects/Tenant_App__c/fields/Client_working_with_External_Co_Broker__c.field-meta.xml
<CustomField>
    <fullName>Client_working_with_External_Co_Broker__c</fullName>
    <label>Client working with External Co-Broker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>