Custom--app/main/default/objects/Tenant_App__c/fields/Co_Broker_Agency__c.field-meta.xml
<CustomField>
    <fullName>Co_Broker_Agency__c</fullName>
    <inlineHelpText>If the co-broker is not affiliated with IH, please list the name of their brokerage here.</inlineHelpText>
    <label>Leasing Agent(Co-broker)-External Agency</label>
    <length>155</length>
    <type>Text</type>
</CustomField>