Custom--app/main/default/objects/Tenant_App__c/fields/Co_Broker_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Co_Broker_Check_Date__c</fullName>
    <label>Leasing Agent(Co-Broker) Ext- Check Date</label>
    <type>Date</type>
</CustomField>