Custom--app/main/default/objects/Tenant_App__c/fields/Co_Broker_External__c.field-meta.xml
<CustomField>
    <fullName>Co_Broker_External__c</fullName>
    <inlineHelpText>If the co-broker is an external agent (not affiliated with IH), please include their first and last name here.</inlineHelpText>
    <label>Leasing Agent (Co-broker) - External</label>
    <length>155</length>
    <type>Text</type>
</CustomField>