Custom--app/main/default/objects/Tenant_App__c/fields/Co_Broker_IH__c.field-meta.xml
<CustomField>
    <fullName>Co_Broker_IH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this field if the co-broker is one of our IH listing agents. If not, use the field below to indicate the co-broker's name and brokerage.</inlineHelpText>
    <label>Leasing Agent (Co-broker ) - IH</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>