Custom--app/main/default/objects/Tenant_App__c/fields/Co_Broker_Invoice_Recv_d_Date__c.field-meta.xml
<CustomField>
    <fullName>Co_Broker_Invoice_Recv_d_Date__c</fullName>
    <label>LA(Co-Broker)Ext- Invoice Rec'd Date</label>
    <type>Date</type>
</CustomField>