Custom--app/main/default/objects/Tenant_App__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <length>15</length>
    <type>Text</type>
</CustomField>