Custom--app/main/default/objects/Tenant_App__c/fields/COncession_Approval__c.field-meta.xml
<CustomField>
    <fullName>COncession_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concession Approval (if applicable)</label>
    <referenceTo>Rental_Offer__c</referenceTo>
    <relationshipLabel>Application Tracking</relationshipLabel>
    <relationshipName>Application_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>