Custom--app/main/default/objects/Tenant_App__c/fields/Confirmation_to_PM_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_to_PM_Date_Time__c</fullName>
    <label>Confirmation to POD Date/Time</label>
    <type>DateTime</type>
</CustomField>