Custom--app/main/default/objects/Tenant_App__c/fields/Credit_Check_Comments__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Comments__c</fullName>
    <label>Credit Check Comments</label>
    <type>TextArea</type>
</CustomField>