Custom--app/main/default/objects/Tenant_App__c/fields/Credit_Check_Complete__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Complete__c</fullName>
    <label>Screening Recommendation Received Date</label>
    <type>DateTime</type>
</CustomField>