Custom--app/main/default/objects/Tenant_App__c/fields/Date_HOA_Security_Deposit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_HOA_Security_Deposit_Requested__c</fullName>
    <formula>Listing__r.Date_HOA_Security_Deposit_Requested__c</formula>
    <inlineHelpText>This date is editable on the associated Listing record.</inlineHelpText>
    <label>Date HOA Security Deposit Requested</label>
    <type>Date</type>
</CustomField>