Custom--app/main/default/objects/Tenant_App__c/fields/Date_Lease_Start_Date_Populated__c.field-meta.xml
<CustomField>
    <fullName>Date_Lease_Start_Date_Populated__c</fullName>
    <description>Hold Last Date When Lease Start date Get populated</description>
    <label>Date Lease Start Date Populated</label>
    <type>DateTime</type>
</CustomField>