Custom--app/main/default/objects/Tenant_App__c/fields/DateTime_Hold_Fee_Rec_d__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Hold_Fee_Rec_d__c</fullName>
    <label>DateTime Hold Fee Rec'd</label>
    <type>DateTime</type>
</CustomField>