Custom--app/main/default/objects/Tenant_App__c/fields/DateTime_Pet_Deposit_Rec_d__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Pet_Deposit_Rec_d__c</fullName>
    <label>DateTime Pet Deposit Rec'd</label>
    <type>DateTime</type>
</CustomField>