Custom--app/main/default/objects/Tenant_App__c/fields/DateTime_Renters_Insurance_Rec_d__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Renters_Insurance_Rec_d__c</fullName>
    <label>DateTime Renters Insurance Rec'd</label>
    <type>DateTime</type>
</CustomField>