Custom--app/main/default/objects/Tenant_App__c/fields/Days_Orientation_to_Lease_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_Orientation_to_Lease_Start__c</fullName>
    <formula>Lease_Start_Date__c - DATEVALUE( Orientation_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Orientation to Lease Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>