Custom--app/main/default/objects/Tenant_App__c/fields/Days_Pro_Rated__c.field-meta.xml
<CustomField>
    <fullName>Days_Pro_Rated__c</fullName>
    <label># Days Pro-Rated (if applicable)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>