Custom--app/main/default/objects/Tenant_App__c/fields/Days_to_Re_Resident__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Re_Resident__c</fullName>
    <description>This field is read only field &amp; will get updated form the listing.</description>
    <label>Days to Re-Resident</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>