Custom--app/main/default/objects/Tenant_App__c/fields/Deposit_Amount_Required__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount_Required__c</fullName>
    <description>Market asking rent from Related listing</description>
    <formula>Listing__r.Market_Rent__c</formula>
    <label>Deposit Amount Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>