Custom--app/main/default/objects/Tenant_App__c/fields/Deposit_Collection_Method__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Collection_Method__c</fullName>
    <label>Deposit Collection Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certified Funds</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>