Custom--app/main/default/objects/Tenant_App__c/fields/Deposit_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Due_Date__c</fullName>
    <formula>Holding_Fee_Paid_date__c +2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hold Fee Due Date</label>
    <type>Date</type>
</CustomField>