Custom--app/main/default/objects/Tenant_App__c/fields/Deposit_Move_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Move_in_Days__c</fullName>
    <formula>1</formula>
    <inlineHelpText>This field will display the number of days between when we received the deposit and the scheduled move-in date.</inlineHelpText>
    <label>Deposit/Move-in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>