Custom--app/main/default/objects/Tenant_App__c/fields/Deposit_Recv_d_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Recv_d_Date__c</fullName>
    <label>DateTime Security Deposit Rec'd</label>
    <type>DateTime</type>
</CustomField>