Custom--app/main/default/objects/Tenant_App__c/fields/Designated_Occupant__c.field-meta.xml
<CustomField>
    <fullName>Designated_Occupant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this person has been verified as a documented adult dependent or caregiver for another applicant, please note here.  (This should be flagged in Onsite as designated occupants have a different screening process.)</inlineHelpText>
    <label>Designated Occupant?</label>
    <type>Checkbox</type>
</CustomField>