Custom--app/main/default/objects/Tenant_App__c/fields/Dispute_Details__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Details__c</fullName>
    <label>Dispute Details</label>
    <type>TextArea</type>
</CustomField>