Custom--app/main/default/objects/Tenant_App__c/fields/Disputing_Denial__c.field-meta.xml
<CustomField>
    <fullName>Disputing_Denial__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the prospect is offically disputing the denial, please check this box.</inlineHelpText>
    <label>Disputing Denial?</label>
    <type>Checkbox</type>
</CustomField>