Custom--app/main/default/objects/Tenant_App__c/fields/Docs_Needed__c.field-meta.xml
<CustomField>
    <fullName>Docs_Needed__c</fullName>
    <inlineHelpText>This field can be used by the Leasing Coordinator to indicate specific documents that are needed.</inlineHelpText>
    <label>Docs Needed</label>
    <type>TextArea</type>
</CustomField>