Custom--app/main/default/objects/Tenant_App__c/fields/File_Status__c.field-meta.xml
<CustomField>
    <fullName>File_Status__c</fullName>
    <label>File Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Move-In Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>