Custom--app/main/default/objects/Tenant_App__c/fields/FOLLOWING_WEEK__c.field-meta.xml
<CustomField>
    <fullName>FOLLOWING_WEEK__c</fullName>
    <description>Scheduled Move in Date (FOLLOWING WEEK)</description>
    <formula>IF( FLOOR((TODAY() - DATE(1900,1,7))/7)+2 == FLOOR((Lease_Start_Date_Agent_Verified__c - DATE(1900,1,7))/7) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FOLLOWING WEEK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>