Custom--app/main/default/objects/Tenant_App__c/fields/General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is read only field &amp; it will be populated from Rehab.</description>
    <label>General Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Tracking (General Contractor)</relationshipLabel>
    <relationshipName>Application_Tracking2</relationshipName>
    <type>Lookup</type>
</CustomField>