Custom--app/main/default/objects/Tenant_App__c/fields/HAP_Lease_Generation__c.field-meta.xml
<CustomField>
    <fullName>HAP_Lease_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HAP Lease Generation</label>
    <type>Checkbox</type>
</CustomField>