Custom--app/main/default/objects/Tenant_App__c/fields/HOA__c.field-meta.xml
<CustomField>
    <fullName>HOA__c</fullName>
    <label>HOA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>